[package]
name = "bitcoin-hd-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.31.1", features = ["serde"] }
secp256k1 = { version = "0.28.1", features = ["rand"] }
bip39 = "2.0.0"
rand = "0.8.5"
num-bigint = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] } 
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
hex = "0.4.3"